scrollbar fix

--- a/src/App.css
+++ b/src/App.css
@@ -40,15 +40,7 @@ body{
     transform: rotate(360deg);
   }
 }
-:root{
-  --text-color-primary: #FFF;
-  --background-color-primary: #0c0d11;
-  --hover-color-primary: #E7BBCB;
-  --hover-color-secondary: #AF96AC;
-  --background-color-secondary: #171a25;
-  --text-color-secondary: #6d708a;
-  --dark-text-color: #061013;
-}
+
 
 #root{
   background-color: var(--background-color-primary);
